[package]
name = "leaf-android"
version = "0.1.0"
authors = ["ghost <noreply>"]
edition = "2018"

[lib]
name = "leafandroid"
path = "src/lib.rs"
crate-type = ["dylib"]

[features]
default = [
    "leaf-ffi/default-ring"
]

[dependencies]
leaf-ffi = { git = "https://github.com/eycorsican/leaf.git", package = "leaf-ffi", default-features = false }
jni = { version = "0.19", default-features = false }
