[package]
name = "leaf-android"
version = "0.1.0"
authors = ["ghost <noreply>"]
edition = "2018"

[lib]
name = "leafandroid"
path = "src/lib.rs"
crate-type = ["dylib"]

[features]
default = [
    "leaf/default-ring"
]

[dependencies]
leaf = { git = "https://github.com/eycorsican/leaf.git", package = "leaf", default-features = false }
jni = { version = "0.19", default-features = false }
tokio = { version = "1", features = ["macros", "rt"] }
futures = "0.3"
